# ShinkaEvolve

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
auxiliary copy/new_task/: setup_new_experiment.md
auxiliary/new_task/: delete_task.py  deploy_task.py  setup_new_experiment.md  setup_task_venv.sh  setup_venv.md
configs/: config.yaml
configs/cluster/: local.yaml
configs/evolution/: large_budget.yaml  medium_budget.yaml
configs/task/: fAInance.yaml
configs/task/alpha_evolve_math_problems/: erdos_min_overlap.yaml  first_autocorr_ineq.yaml  second_autocorr_ineq.yaml  third_autocorr_ineq.yaml
configs/variant/circle_packing/: circle_packing_gptoss_guadiana.yaml  circle_packing_gptoss_guadiana_test.yaml  circle_packing_gptoss_mondego.yaml  circle_packing_gptoss_start_156.yaml  circle_packing_test.yaml
configs/variant/fAInance/: variant.yaml  variant_ca.yaml  variant_hd.yaml  variant_nvda.yaml
configs/variant/novelty_generator/: novelty_generator.yaml
docs/: agentic_usage.md  async_evolution.md  configuration.md  getting_started.md  release_notes.md  support_local_llm.md  webui.md
examples/: shinka_tutorial.ipynb
examples/alpha_evolve_math_problems/: pyproject.toml
examples/alpha_evolve_math_problems/erdos_min_overlap/: README.md  evaluate.py  initial_open_evolve.py  initial_test_time.py  visualization.ipynb
examples/alpha_evolve_math_problems/first_autocorr_ineq/: README.md  best_sequence_prev_alpha_evolve.txt  evaluate.py  initial_alpha_evolve.py  initial_open_evolve.py  visualization.ipynb
examples/alpha_evolve_math_problems/second_autocorr_ineq/: README.md  best_sequence_prev_alpha_evolve.txt  best_sequence_prev_alpha_evolve_v2.txt  evaluate.py  initial_alpha_evolve.py  initial_code_evolve.py  initial_open_evolve.py  initial_theta_evolve.py  visualization.ipynb
examples/alpha_evolve_math_problems/third_autocorr_ineq/: README.md  best_2.txt  best_seq_0.txt  best_seq_1.txt  best_seq_2.txt  best_seq_4.txt  best_sequence_prev_alpha_evolve.txt  elite_seq_1.txt  elite_seq_2.txt  evaluate.py  initial_alpha_evolve.py  initial_code_evolve.py  initial_open_evolve.py  initial_theta_evolve.py  visualization.ipynb
examples/circle_packing/: README.md  evaluate.py  initial.py  load_results.ipynb  run_evo.py  run_evo_async.py  shinka_long.yaml  shinka_medium.yaml  shinka_small.yaml
examples/fAInance/: evaluate.py  evaluate_single.py  initial.py  notebook.ipynb
examples/game_2048/: animate.py  env.py  evaluate.py  initial.py  run_evo.py
examples/julia_prime_counting/: README.md  evaluate.py  initial.jl  run_evo.py
shinka/: launch_hydra.py
shinka/cli/: __init__.py  run.py  shinka_launch  shinka_run  shinka_visualize
shinka/core/: __init__.py  async_novelty_judge.py  async_runner.py  async_summarizer.py  prompt_evolver.py  runner.py  sampler.py  summarizer.py  wrap_eval.py
shinka/database/: __init__.py  async_dbase.py  complexity.py  dbase.py  display.py  inspirations.py  island_sampler.py  islands.py  parents.py  prompt_dbase.py
shinka/edit/: apply_diff.py  apply_full.py  async_apply.py
shinka/embed/: __init__.py  client.py  embedding.py
shinka/embed/providers/: __init__.py  pricing.csv  pricing.py
shinka/launch/: scheduler.py
shinka/llm/: __init__.py  client.py  embedding.py  kwargs.py  llm.py  prioritization.py  query.py
shinka/plots/: __init__.py  plot_costs.py  plot_evals.py  plot_lineage_tree.py  plot_llm.py  plot_pareto.py  plot_time.py
shinka/prompts/: __init__.py  prompts_base.py  prompts_cross.py  prompts_diff.py  prompts_fix.py  prompts_full.py  prompts_init.py  prompts_prompt_evo.py
shinka/utils/: __init__.py  custom.py  eval_stop.py  general.py  languages.py  load_df.py
shinka/webui/: compare.html  index.html  visualization.py  viz_tree.html
skills/shinka-run/: SKILL.md
skills/shinka-setup/: SKILL.md
tests/: conftest.py  test_async_complexity_1000.py  test_bandit_persistence.py  test_database_no_api_keys.py  test_dynamic_islands.py  test_edit_base.py  test_edit_julia.py  test_gemini_provider.py  test_island_sampler.py  test_llm_client_backends.py  test_llm_kwargs.py  test_llm_query_routing.py  test_meta_summarizer.py  test_model_resolver.py  test_novelty_judge.py  test_openai_provider.py  test_prompt_evolution.py  test_shinka_run_cli.py  test_wrap_eval_parallel.py
(+63 files in other folders)
